2007-05-23  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04242] Re: Compile error when --without-ssl
	* aclocal.m4, configure.ac: add checking ssl before digest_auth.
	* configure: regenerated.

2007-05-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04240] nl_langinfo() requires setlocale()
	* fm.h, main.c, menu.c, rc.c: add "#ifdef"s.
	* libwc/charset.c: add setlocale() for nl_langinfo().

2007-05-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03923] <pre> in <table>
	* file.c, table.c: avoid extra blanks in pre in table.

2007-05-23  tamo

	* [20070121110209@w3mbbs] unnecessary decoding in linein.c
	* linein.c: decoding URLs in correct condition.

2007-05-23  Tsutomu OKADA

	* [20061228000713@w3mbbs] avoid warning for file.c
	* html.h: change char to unsigned char for HTML_DL_COMPACT(133).

2007-05-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04213] update Unicode characters' width
	* libwc/ucs.c, libwc/ucs.h, libwc/map/ucs_wide.map: 
	  catch-up to EastAsianWidth-5.0.0.txt.

2007-04-19  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04212] quote URL of local dir
	* local.c: quote URLs with non-ASCII local directory names.

2007-04-19  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04211] input type=image
	* file.c, html.[ch]: avoid conflicts between input_alt and img_alt.
	  fix calculation of labeled line numbers when fold_line=1.

2007-04-19  Hiroyuki Ito  <ZXB01226@nifty.com>

	* [w3m-dev 04197] Re: italic text
	* fm.h: display <em> and <i> elements with underline.

2006-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [SECURITY] fix format string vulnerability
	* file.c (inputAnswer) fix format string bug

2006-12-07  Hiroyuki Ito  <ZXB01226@nifty.com>

	* [w3m-dev 04185] Re: italic text
	* file.c, fm.h, html.c, html.h, tagtable.tab:
	  display <em> and <i> elements with bold letters.

2006-12-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* [w3m-dev 04184] automatic uncompression in downloading