@@ -87,7 +87,7 @@ static int OptionEncode = FALSE;
 #define CMT_ALT_ENTITY   N_("Use ASCII equivalents to display entities")
 #define CMT_GRAPHIC_CHAR N_("Use graphic char for border of table and menu")
 #define CMT_FOLD_TEXTAREA N_("Fold lines in TEXTAREA")
-#define CMT_DISP_INS_DEL N_("Display DEL, S and STRIKE element")
+#define CMT_DISP_INS_DEL N_("Display INS, DEL, S and STRIKE element")
 #define CMT_COLOR        N_("Display with color")
 #define CMT_B_COLOR      N_("Color of normal character")
 #define CMT_A_COLOR      N_("Color of anchor")
@@ -281,6 +281,13 @@ static struct sel_c defaulturls[] = {
     {0, NULL, NULL}
 };
 
+static struct sel_c displayinsdel[] = {
+    {N_S(DISPLAY_INS_DEL_SIMPLE), N_("simple")},
+    {N_S(DISPLAY_INS_DEL_NORMAL), N_("use tag")},
+    {N_S(DISPLAY_INS_DEL_FONTIFY), N_("fontify")},
+    {0, NULL, NULL}
+};
+
 #ifdef USE_MOUSE
 static struct sel_c wheelmode[] = {
     {TRUE, "1", N_("A:relative to screen height")},
@@ -361,8 +368,8 @@ struct param_ptr params1[] = {
      CMT_GRAPHIC_CHAR, NULL},
     {"fold_textarea", P_CHARINT, PI_ONOFF, (void *)&FoldTextarea,
      CMT_FOLD_TEXTAREA, NULL},
-    {"display_ins_del", P_INT, PI_ONOFF, (void *)&displayInsDel,
-     CMT_DISP_INS_DEL, NULL},
+    {"display_ins_del", P_INT, PI_SEL_C, (void *)&displayInsDel,
+     CMT_DISP_INS_DEL, displayinsdel},
     {"ignore_null_img_alt", P_INT, PI_ONOFF, (void *)&ignore_null_img_alt,
      CMT_IGNORE_NULL_IMG_ALT, NULL},
     {"view_unseenobject", P_INT, PI_ONOFF, (void *)&view_unseenobject,
